# markitecture

./: .pre-commit-config.yaml  .python-version  .ruff.toml  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: ci.yml  tag-version.yml
docs/: index.md
docs/examples/reflinks-converter/: output_with_reflinks.md
examples/input-file/: README-AI.md
examples/metrics/: preview.html
examples/output-h2/: acknowledgments.md  demo.md  features.md  getting-started.md  license.md
examples/output-h3/: usage.md
examples/output-h4/: set-your-api-key.md  streamlit-streamlit.md  using-the-cli.md
examples/reference-links/: convert-links.ipynb  convert-pydantic.md  convert-to-reflinks.md  convert_pydantic_section.md  reflinks_conversion.md
examples/split-sections-h2/: mkdocs.yml
kenshi/splitters/: markdown.py
scripts/: bump_version.py
src/splitme_ai/: __init__.py  cli.py
src/splitme_ai/tools/: markdown_link_validator.py
src/splitme_ai/utils/: reference_links.py
tests/splitters/: test_markdown.py
