[tool.poetry]
name = "kenshi"
version = "0.1.0"
description = ""
authors = ["Eli <43382407+eli64s@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ruff = "*"

[tool.poetry.group.test.dependencies]
pytest = "=7.4.4"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-randomly = "*"
pytest-sugar = "*"
pytest-xdist = "*"

[tool.ruff]
exclude = [
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pytest_cache",
    ".ruff_cache",
    ".vscode",
]
line-length = 79

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = 20

[tool.ruff.lint]
extend-select = ["E501"]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
]
ignore = [
    # Line too long
    "E501",
]

[tool.coverage.run]
source = ["readmeai", "tests"]
omit = [
    "tests/*",
    "*__init__.py",
    "*/__init__.py",
    "noxfile.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
